--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -1,26 +1,31 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Hello Ionic</ion-title>
+    <ion-title>Bubbler Tagger</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
 
-  <h3>Welcome to your first Ionic app!</h3>
-
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-
+  <h3>Choose an existing event or create a new one!</h3>
+<!-- 
   <ul>
     <li *ngFor="let item of events | async">
        {{ item | json }}
     </li>
   </ul>
+ -->
+  <!-- <ion-content> -->
+  <ion-list>
+    <ion-item *ngFor="let item of events | async" (click)="chooseEvent(item.payload.val().themes, item.key)">
+      <h3>Location: {{item.payload.val().eventCode}}</h3>
+      <h4>
+          Coder: {{item.payload.val().eventOrganizer}}  |||   Themes: {{item.payload.val().themes}}
+      </h4>
+    </ion-item>
+  </ion-list>
+  <!-- </ion-content> -->
+
 
 <!--   <ng-container *ngFor="let a of events | async">
     <ion-list>
@@ -32,13 +37,6 @@
 
   </ng-container>
  -->
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
-  <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
-
   <!-- <form [formGroup]="authForm" (ngSubmit)="logForm()"> -->
   <form [formGroup]="authForm" (ngSubmit)="onSubmit(authForm.value)">
     <ion-list>
