--- a/src/pages/event-details/event-details.html
+++ b/src/pages/event-details/event-details.html
@@ -57,6 +57,14 @@
       </ion-card-content>
       
     </ion-card>
+    
+    <ion-list>
+      <ion-item *ngFor="let pic of imageList; index as i;">
+        <p>{{pic.fileName}}</p>
+        <button ion-button clear item-end large (click)="removePicture(pic.fileName, i)"><ion-icon name="trash"></ion-icon></button>
+      </ion-item>
+    </ion-list>
+
     <ion-card>
       <ion-card-content>
         <ion-card-title>
@@ -73,8 +81,9 @@
     </ion-card>
     <ion-list>
       <ion-item *ngFor="let audio of audioList; index as i;">
-        <p>{{audio.filename}}</p>
-        <button ion-button clear item-end large (click)="playAudio(audio.filename, i)"><ion-icon name="play"></ion-icon></button>
+        <p>{{audio.fileName}}</p>
+        <button ion-button clear item-end large (click)="playAudio(audio.fileName, i)"><ion-icon name="play"></ion-icon></button>
+        <button ion-button clear item-end large (click)="removeAudio(audio.fileName, i)"><ion-icon name="trash"></ion-icon></button>
       </ion-item>
     </ion-list>
 
